Fix navbar collapsed styling

--- a/client/stylesheets/components.import.less
+++ b/client/stylesheets/components.import.less
@@ -21,6 +21,11 @@ tr.info > th {
   margin: 0;
 }
 
+.loading {
+  text-align: center;
+  margin: @main-padding auto;
+}
+
 .log {
   min-height: 100px;
   overflow-y: auto;
@@ -49,6 +54,18 @@ tr.info > th {
 .navbar {
   height: @nav-height;
 }
+.navbar-collapse {
+  background-color: #f8f8f8;
+  border-bottom: 1px solid @gray-color;
+}
+.navbar-collapse .navbar-form {
+  margin-left: 0;
+}
+.navbar-nav {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .page-header {
   margin: 0;
   padding: (@nav-height + @large-padding) @main-padding @large-padding;
@@ -143,7 +160,8 @@ th.dropdown {
   cursor: pointer;
 
   p { margin: 0; }
-  &:hover { 
+
+  &:hover {
     color: #262626;
     background-color: #f5f5f5; 
   }
